--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Navigation -->
     <nav id="main-nav">
         <div class="logo">
-            <img src="logo.png" alt="Logo Studio Noble-Val" class="logo-img"> <!-- Ajoutez cette ligne -->
+            <img src="logo.png" alt="Logo Studio Noble-Val" class="logo-img">
             Studio Noble-Val
         </div>
         
